@@ -1,1 +1,3 @@
-Optimization
+* Interface module separated
+* Optimization
+* Docstrings added
